maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:11: error: Missing closing brace `}' assumed here
  while (estFaceMur){
  ^Escaper:17: error: expected class or object definition
def nord(){
^